# IndustrialPrognosisAI

./: README.md  pyproject.toml  requirements.txt  setup.py
configs/: cnn_config.yaml  experiment_config.yaml
src/: __init__.py
src/data/: __init__.py  data_loader.py  feature_engineer.py  preprocessor.py
src/evaluation/: __init__.py  explainability.py  metrics.py  visualization.py
src/models/: __init__.py  base_model.py  cnn_model.py  model_factory.py
src/training/: __init__.py  cross_validation.py  hyperparameter_tuning.py  trainer.py
src/utils/: __init__.py  config.py  logger.py
